--- a/public/style.css
+++ b/public/style.css
@@ -16,7 +16,9 @@
     flex-direction: column;
     align-items: center;
     background-color: rgba(0, 0, 0, 0.3);
-    width: 35vw;
+    background: center / cover no-repeat
+    width: 100%;
+    height: 100vh;
     font-family: Arial, Helvetica, sans-serif;
 }
 
@@ -131,7 +133,7 @@
     align-items: center;
     justify-content: space-between;
     width: 80%;
-    max-width: 150px;
+    max-width: 200px;
     padding: 0.5em 0;
 }
 
@@ -142,7 +144,7 @@
     justify-content: center;
     position: relative;
     padding: 0.5em;
-    max-width: 150px;
+    max-width: 200px;
 }
 
 input[type="range"] {
@@ -183,4 +185,13 @@ input[type="range"]::-moz-range-thumb {
 
 input[type="range"]:hover::-moz-range-thumb {
     visibility: visible;
+}
+
+#volume-slider {
+    border-radius: 1em;
+    width: 80%;
+  }
+
+#refresh-button, #logout-button {
+    display: none;
 }
